1999-04-01  Paul D. Smith  <psmith@gnu.org>

	* job.c (construct_command_argv_internal): Use bcopy() to copy
	overlapping strings, rather than strcpy().  ISO C says the latter
	is undefined.  Found this in a bug report from 1996!  Ouch!

1999-03-31  Paul D. Smith  <psmith@gnu.org>

	* read.c (readline): Ignore carriage returns at the end of the
	line, to allow Windows-y CRLF line terminators.

1999-03-30  Paul D. Smith  <psmith@gnu.org>

	* configure.in: Don't put build.sh here, since build.sh.in doesn't
	exist initially.  This cause autoreconf and automake to fail when
	run on a clean CVS checkout.  Instead, we create build.sh in the
	Makefile (see below).

	* Makefile.am: Remove BUILT_SOURCES; this is no longer relevant.
	Put those files directly into EXTRA_DIST so they're distributed.
	Create a local build rule to create build.sh.
	Create a local maintainer-clean rule to delete all the funky
	maintainers files.

	* maintMakefile: Makefile.in depends on README, since automake
	fails if it doesn't exist.  Also don't remove glob/Makefile.in
	here, as it causes problems.

1999-03-26  Paul D. Smith  <psmith@gnu.org>

	* configure.in: Substitute GLOBLIB if we need the link the
	glob/libglob.a library.
	* Makefile.am (make_LDADD): Use the subst variable GLOBLIB so we
	don't link the local libglob.a at all if we don't need it.
	* build.template: Don't compile glob/*.o unless we want globlib.
	* maintMakefile (build.sh.in): Substitute the glob/*.o files
	separately.

1999-03-25  Paul D. Smith  <psmith@gnu.org>

	* make.texinfo: Various typos and additions, pointed out by James
	G. Sack <jsack@dornfeld.com>.

1999-03-22  Paul D. Smith  <psmith@gnu.org>

	* make.texinfo (Functions): Add a new section documenting the new
	$(error ...) and $(warning ...) functions.  Also updated copyright
	dates.
	* NEWS: Updated for the new functions.
	* function.c (func_error): Implement the new $(error ...) and
	$(warning ...) functions.